Attempt to fix linter